[package]
name = "naga-error"
version = "0.1.0"
edition = "2018"
authors = ["Jed Pommert (Kneelawk) <kneelawk@gmail.com>"]

[features]
use-naga-lib = ["naga"]
use-naga-spv = []
use-tint-spv = []
use-wgsl-src = []

[dependencies]
dotenv = "0.15.0"
env_logger = "0.8.4"
image = "0.23.14"
log = "0.4.14"
naga = { version = "0.4.2", features = ["wgsl-in", "wgsl-out", "glsl-out", "spv-out"], optional = true }
tokio = { version = "1.7.0", features = ["rt", "io-util", "macros", "fs"] }
wgpu = "0.8.1"
